--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -296,6 +296,15 @@ tasks:
           UNIFI_DOWNLOADER_HOST="{{.UNIFI_DOWNLOADER_HOST}}"
           UNIFI_DOWNLOADER_USERNAME="{{.UNIFI_DOWNLOADER_USERNAME}}"
           UNIFI_DOWNLOADER_PASSWORD="{{.UNIFI_DOWNLOADER_PASSWORD}}"
+      # monitoring/gatus
+      - vault kv put -mount=secret/{{.ENVIRONMENT}} monitoring/gatus
+          GATUS_POSTGRES_SUPER_USER="{{.GATUS_POSTGRES_SUPER_USER}}"
+          GATUS_POSTGRES_SUPER_PASSWORD="{{.GATUS_POSTGRES_SUPER_PASSWORD}}"
+          GATUS_POSTGRES_USER="{{.GATUS_POSTGRES_USER}}"
+          GATUS_POSTGRES_PASSWORD="{{.GATUS_POSTGRES_PASSWORD}}"
+          GATUS_DB_BACKUP_ACCESS_KEY="{{.GATUS_DB_BACKUP_ACCESS_KEY}}"
+          GATUS_DB_BACKUP_SECRET="{{.GATUS_DB_BACKUP_SECRET}}"
+          GATUS_SLACK_WEBHOOK_URL="{{.SLACK_WEBHOOK}}"
       # monitoring/grafana
       - vault kv put -mount=secret/{{.ENVIRONMENT}} monitoring/grafana
           ADMIN_USER="{{.GRAFANA_ADMIN_USER}}"
