--- a/kubernetes/apps/monitoring/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/gatus/app/helmrelease.yaml
@@ -26,7 +26,7 @@ spec:
     keepHistory: false
   values:
     initContainers:
-      config-sync:
+      01-config-sync:
         image: ghcr.io/kiwigrid/k8s-sidecar:1.25.0
         imagePullPolicy: IfNotPresent
         env:
