fix connectivity check

--- a/kubernetes/apps/monitoring/gatus/app/config/config.yaml
+++ b/kubernetes/apps/monitoring/gatus/app/config/config.yaml
@@ -15,6 +15,7 @@ alerting:
     webhook-url: ${GATUS_SLACK_WEBHOOK_URL}
 connectivity:
   checker:
+    target: 1.1.1.1:53
     interval: 1m
 endpoints:
   - name: status
