--- a/kubernetes/apps/monitoring/gatus/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/gatus/app/externalsecret.yaml
@@ -19,6 +19,7 @@ spec:
         # DB
         GATUS_POSTGRES_USER: "{{ .GATUS_POSTGRES_USER }}"
         GATUS_POSTGRES_PASSWORD: "{{ .GATUS_POSTGRES_PASSWORD }}"
+        GATUS_DOMAIN: "{{ .GATUS_DOMAIN }}"
   dataFrom:
     - extract:
         key: /monitoring/gatus
