--- a/kubernetes/apps/home-automation/home-assistant/app/kustomization.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: home-automation
 resources:
   - ./externalsecret.yaml
   - ./configmap.yaml
+  - ./gatus.yaml
   - ./helmrelease.yaml
   - ./ingress.yaml
   - ./volsync.yaml
