--- a/kubernetes/apps/home-automation/esphome/app/kustomization.yaml
+++ b/kubernetes/apps/home-automation/esphome/app/kustomization.yaml
@@ -5,5 +5,6 @@ kind: Kustomization
 namespace: home-automation
 resources:
   - helmrelease.yaml
+  - gatus.yaml
   - ingress.yaml
   - volsync.yaml
