add endpoint monitoring

--- a/kubernetes/apps/media/immich/app/kustomization.yaml
+++ b/kubernetes/apps/media/immich/app/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./externalsecret.yaml
   - ./configmap.yaml
   - ./nfs-pvc.yaml
+  - ./gatus.yaml
   - ./typesense
   - ./server
   - ./microservices
