--- a/kubernetes/apps/monitoring/thanos/app/kustomization.yaml
+++ b/kubernetes/apps/monitoring/thanos/app/kustomization.yaml
@@ -5,5 +5,6 @@ kind: Kustomization
 namespace: monitoring
 resources:
   - ./objectbucketclaim.yaml
+  - ./gatus.yaml
   - ./helmrelease.yaml
   - ./ingress.yaml
