--- a/kubernetes/apps/security/authelia/database/kustomization.yaml
+++ b/kubernetes/apps/security/authelia/database/kustomization.yaml
@@ -2,10 +2,8 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: security
 resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
   - ./externalsecret.yaml
-  # Flux-Kustomizations
-  - ./authelia/ks.yaml
-  - ./lldap/ks.yaml
+  - ./cluster.yaml
+  - ./scheduledbackup.yaml
