--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -322,6 +322,14 @@ tasks:
           AUTHELIA_POSTGRES_PASSWORD="{{.AUTHELIA_POSTGRES_PASSWORD}}"
           AUTHELIA_DB_BACKUP_ACCESS_KEY="{{.AUTHELIA_DB_BACKUP_ACCESS_KEY}}"
           AUTHELIA_DB_BACKUP_SECRET="{{.AUTHELIA_DB_BACKUP_SECRET}}"
+          AUTHELIA_JWT_SECRET="{{.AUTHELIA_JWT_SECRET}}"
+          AUTHELIA_SESSION_SECRET="{{.AUTHELIA_SESSION_SECRET}}"
+          AUTHELIA_STORAGE_ENCRYPTION_KEY="{{.AUTHELIA_STORAGE_ENCRYPTION_KEY}}"
+          DOMAIN="{{.DOMAIN}}"
+          GRAFANA_OAUTH_CLIENT_SECRET="{{.GRAFANA_OAUTH_CLIENT_SECRET}}"
+          IMMICH_OAUTH_CLIENT_SECRET="{{.IMMICH_OAUTH_CLIENT_SECRET}}"
+          MINIFLUX_OAUTH_CLIENT_SECRET="{{.MINIFLUX_OAUTH_CLIENT_SECRET}}"
+          WEAVEGITOPS_OAUTH_CLIENT_SECRET="{{.WEAVEGITOPS_OAUTH_CLIENT_SECRET}}"
       # security/lldap
       - vault kv put -mount=secret/{{.ENVIRONMENT}} security/lldap
           LLDAP_POSTGRES_SUPER_USER="{{.LLDAP_POSTGRES_SUPER_USER}}"
