--- a/kubernetes/apps/security/authelia/ks.yaml
+++ b/kubernetes/apps/security/authelia/ks.yaml
@@ -14,21 +14,21 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 5m
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: cluster-apps-authelia
-#   namespace: flux-system
-# spec:
-#   dependsOn:
-#     - name: cluster-apps-authelia-database
-#   path: ./kubernetes/apps/security/authelia/app
-#   prune: true
-#   sourceRef:
-#     kind: GitRepository
-#     name: home-kubernetes
-#   wait: false
-#   interval: 30m
-#   retryInterval: 1m
-#   timeout: 5m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cluster-apps-authelia
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: cluster-apps-authelia-database
+  path: ./kubernetes/apps/security/authelia/app
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  wait: false
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
