--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -322,6 +322,8 @@ tasks:
           AUTHELIA_POSTGRES_PASSWORD="{{.AUTHELIA_POSTGRES_PASSWORD}}"
           AUTHELIA_DB_BACKUP_ACCESS_KEY="{{.AUTHELIA_DB_BACKUP_ACCESS_KEY}}"
           AUTHELIA_DB_BACKUP_SECRET="{{.AUTHELIA_DB_BACKUP_SECRET}}"
+          AUTHELIA_IDENTITY_PROVIDERS_OIDC_HMAC_SECRET="{{.AUTHELIA_IDENTITY_PROVIDERS_OIDC_HMAC_SECRET}}"
+          AUTHELIA_IDENTITY_PROVIDERS_OIDC_ISSUER_PRIVATE_KEY="{{.AUTHELIA_IDENTITY_PROVIDERS_OIDC_ISSUER_PRIVATE_KEY}}"
           AUTHELIA_JWT_SECRET="{{.AUTHELIA_JWT_SECRET}}"
           AUTHELIA_SESSION_SECRET="{{.AUTHELIA_SESSION_SECRET}}"
           AUTHELIA_STORAGE_ENCRYPTION_KEY="{{.AUTHELIA_STORAGE_ENCRYPTION_KEY}}"
