--- a/kubernetes/apps/security/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/security/authelia/app/config/configuration.yaml
@@ -11,6 +11,11 @@ session:
         - host: redis-node-2.redis-headless.database.svc.cluster.local
           port: 26379
 
+notifier:
+  disable_startup_check: false
+  filesystem:
+    filename: /config/notification.txt
+
 access_control:
   default_policy: two_factor
   networks:
