--- a/kubernetes/apps/security/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/security/authelia/app/helmrelease.yaml
@@ -72,7 +72,7 @@ spec:
       main:
         ports:
           http:
-            port: 8080
+            port: &port 8080
     probes:
       liveness: &probes
         enabled: true
