--- a/kubernetes/apps/security/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/security/authelia/app/helmrelease.yaml
@@ -75,7 +75,7 @@ spec:
             port: &port 9091
     probes:
       liveness: &probes
-        enabled: true
+        enabled: false
         custom: true
         spec:
           httpGet:
