--- a/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
@@ -23,7 +23,7 @@ spec:
           port = 636
           use_ssl = true
           start_tls = false
-          ssl_skip_verify =  false
+          ssl_skip_verify =  true
           bind_dn = "uid={{ .LDAP_USERNAME }},cn=users,{{ .LDAP_ROOT }}"
           bind_password = "{{ .LDAP_PASSWORD }}"
 
