--- a/ansible/kubernetes/playbooks/cluster-installation.yaml
+++ b/ansible/kubernetes/playbooks/cluster-installation.yaml
@@ -38,7 +38,7 @@
       run_once: true
       ansible.builtin.fetch:
         src: /etc/rancher/k3s/k3s.yaml
-        dest: "{{ playbook_dir }}/../../../kubeconfig"
+        dest: "{{ playbook_dir }}/../../../{{ lookup('env', 'ENVIRONMENT') }}.kubeconfig"
         flat: true
       when:
         - k3s_primary_control_node is defined
@@ -49,7 +49,7 @@
       become: false
       run_once: true
       ansible.builtin.replace:
-        path: "{{ playbook_dir }}/../../../kubeconfig"
+        path: "{{ playbook_dir }}/../../../{{ lookup('env', 'ENVIRONMENT') }}.kubeconfig"
         regexp: "https://127.0.0.1:6443"
         replace: "https://{{ lookup('env', 'VIP_IP') }}"
 
