--- a/kubernetes/apps/k8s/database/cloudnative-pg/ks.yaml
+++ b/kubernetes/apps/k8s/database/cloudnative-pg/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-cloudnative-pg
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/database/cloudnative-pg/app
+  path: ./kubernetes/apps/${ENVIRONMENT}/database/cloudnative-pg/app
   prune: true
   sourceRef:
     kind: GitRepository
