--- a/kubernetes/apps/k8s/flux-system/addons/ks.yaml
+++ b/kubernetes/apps/k8s/flux-system/addons/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-flux-addons
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/flux-system/addons/app
+  path: ./kubernetes/apps/${ENVIRONMENT}/flux-system/addons/app
   prune: true
   sourceRef:
     kind: GitRepository
