--- a/kubernetes/apps/k8s/home-automation/zwave-js-ui/ks.yaml
+++ b/kubernetes/apps/k8s/home-automation/zwave-js-ui/ks.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-node-feature-rules
-  path: ./kubernetes/apps/home-automation/zwave-js-ui/app
+  path: ./kubernetes/apps/${ENVIRONMENT}/home-automation/zwave-js-ui/app
   prune: true
   sourceRef:
     kind: GitRepository
