--- a/kubernetes/apps/k8s/kube-system/coredns/ks.yaml
+++ b/kubernetes/apps/k8s/kube-system/coredns/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-coredns
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/kube-system/coredns/app
+  path: ./kubernetes/apps/${ENVIRONMENT}/kube-system/coredns/app
   prune: false
   sourceRef:
     kind: GitRepository
