--- a/kubernetes/apps/k8s/media/immich/ks.yaml
+++ b/kubernetes/apps/k8s/media/immich/ks.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-media-immich-database
-  path: ./kubernetes/apps/media/immich/app
+  path: ./kubernetes/apps/${ENVIRONMENT}/media/immich/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -25,7 +25,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-cloudnative-pg
-  path: ./kubernetes/apps/media/immich/database
+  path: ./kubernetes/apps/${ENVIRONMENT}/media/immich/database
   prune: true
   sourceRef:
     kind: GitRepository
