--- a/kubernetes/apps/k8s/monitoring/loki/ks.yaml
+++ b/kubernetes/apps/k8s/monitoring/loki/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-loki
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/monitoring/loki/app
+  path: ./kubernetes/apps/${ENVIRONMENT}/monitoring/loki/app
   prune: true
   sourceRef:
     kind: GitRepository
