--- a/kubernetes/apps/k8s/security/authelia/ks.yaml
+++ b/kubernetes/apps/k8s/security/authelia/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-authelia-database
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/security/authelia/database
+  path: ./kubernetes/apps/${ENVIRONMENT}/security/authelia/database
   prune: true
   sourceRef:
     kind: GitRepository
@@ -23,7 +23,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-authelia-database
-  path: ./kubernetes/apps/security/authelia/app
+  path: ./kubernetes/apps/${ENVIRONMENT}/security/authelia/app
   prune: true
   sourceRef:
     kind: GitRepository
