--- a/kubernetes/apps/k8s/volsync/volsync/ks.yaml
+++ b/kubernetes/apps/k8s/volsync/volsync/ks.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-snapshot-controller
-  path: ./kubernetes/apps/volsync/volsync/app
+  path: ./kubernetes/apps/${ENVIRONMENT}/volsync/volsync/app
   prune: true
   sourceRef:
     kind: GitRepository
