--- a/kubernetes/bootstrap/k0s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k0s/sharedsecrets.yaml
@@ -20,6 +20,9 @@ spec:
         DOCKER_PRIVATE_REGISTRY: "{{.DOCKER_PRIVATE_REGISTRY}}"
         DOMAIN: "{{.DOMAIN}}"
         ENVIRONMENT: "{{.ENVIRONMENT}}"
+        EMQX_LB_IP: "{{.EMQX_LB_IP}}"
+        IPAM_CIDR: "{{.IPAM_CIDR}}"
+        LOCAL_DOMAIN: "{{.LOCAL_DOMAIN}}"
         NFS_SERVER_IP: "{{.NFS_SERVER_IP}}"
         SERVER_CIDR: "{{.SERVER_CIDR}}"
         SLACK_WEBHOOK: "{{.SLACK_WEBHOOK}}"
