--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
   - ./external-dns.yaml
   - ./external-secrets.yaml
   - ./grafana.yaml
+  - ./hashicorp.yaml
   - ./influxdata.yaml
   - ./ingress-nginx.yaml
   - ./jetstack.yaml
