--- a/kubernetes/bootstrap/k0s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k0s/sharedsecrets.yaml
@@ -1,33 +1,30 @@
 ---
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
+apiVersion: v1
+kind: Secret
 metadata:
   name: cluster-secrets
   namespace: flux-system
 spec:
-  refreshInterval: "30m"
-  secretStoreRef:
-    name: vault-kv-backend
-    kind: SecretStore
-  target:
-    name: cluster-secrets
-    template:
-      type: Opaque
-      engineVersion: v2
-      data:
-        CILIUM_LB_IP: "{{.CILIUM_LB_IP}}"
-        CLOUDFLARE_EMAIL: "{{.CLOUDFLARE_EMAIL}}"
-        DOCKER_PRIVATE_REGISTRY: "{{.DOCKER_PRIVATE_REGISTRY}}"
-        DOMAIN: "{{.DOMAIN}}"
-        ENVIRONMENT: "{{.ENVIRONMENT}}"
-        EMQX_LB_IP: "{{.EMQX_LB_IP}}"
-        IPAM_CIDR: "{{.IPAM_CIDR}}"
-        LOCAL_DOMAIN: "{{.LOCAL_DOMAIN}}"
-        NFS_SERVER_IP: "{{.NFS_SERVER_IP}}"
-        SERVER_CIDR: "{{.SERVER_CIDR}}"
-        SLACK_WEBHOOK: "{{.SLACK_WEBHOOK}}"
-        VIP_IP: "{{.VIP_IP}}"
-        VIP_PORT: "{{.VIP_PORT}}"
-  dataFrom:
-    - extract:
-        key: /cluster
+  type: Opaque
+  data:
+    CILIUM_LB_IP: "${CILIUM_LB_IP}"
+    CLOUDFLARE_EMAIL: "${CLOUDFLARE_EMAIL}"
+    DOCKER_PRIVATE_REGISTRY: "${DOCKER_PRIVATE_REGISTRY}"
+    DOMAIN: "${DOMAIN}"
+    ENVIRONMENT: "${ENVIRONMENT}"
+    IPAM_CIDR: "${IPAM_CIDR}"
+    NFS_SERVER_IP: "${NFS_SERVER_IP}"
+    SERVER_CIDR: "${SERVER_CIDR}"
+    SLACK_WEBHOOK: "${SLACK_WEBHOOK}"
+    VIP_IP: "${VIP_IP}"
+    VIP_PORT: "${VIP_PORT}"
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: cloudflare-secret
+  namespace: cert-manager
+spec:
+  type: Opaque
+  data:
+    CLOUDFLARE_TOKEN: "${CLOUDFLARE_TOKEN}"
