add hack for chegg secrets

--- a/kubernetes/bootstrap/k0s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k0s/sharedsecrets.yaml
@@ -4,27 +4,32 @@ kind: Secret
 metadata:
   name: cluster-secrets
   namespace: flux-system
-spec:
-  type: Opaque
-  data:
-    CILIUM_LB_IP: "${CILIUM_LB_IP}"
-    CLOUDFLARE_EMAIL: "${CLOUDFLARE_EMAIL}"
-    DOCKER_PRIVATE_REGISTRY: "${DOCKER_PRIVATE_REGISTRY}"
-    DOMAIN: "${DOMAIN}"
-    ENVIRONMENT: "${ENVIRONMENT}"
-    IPAM_CIDR: "${IPAM_CIDR}"
-    NFS_SERVER_IP: "${NFS_SERVER_IP}"
-    SERVER_CIDR: "${SERVER_CIDR}"
-    SLACK_WEBHOOK: "${SLACK_WEBHOOK}"
-    VIP_IP: "${VIP_IP}"
-    VIP_PORT: "${VIP_PORT}"
+type: Opaque
+stringData:
+  CILIUM_LB_IP: "${CILIUM_LB_IP}"
+  CLOUDFLARE_EMAIL: "${CLOUDFLARE_EMAIL}"
+  DOCKER_PRIVATE_REGISTRY: "${DOCKER_PRIVATE_REGISTRY}"
+  DOMAIN: "${DOMAIN}"
+  ENVIRONMENT: "${ENVIRONMENT}"
+  IPAM_CIDR: "${IPAM_CIDR}"
+  NFS_SERVER_IP: "${NFS_SERVER_IP}"
+  SERVER_CIDR: "${SERVER_CIDR}"
+  SLACK_WEBHOOK: "${SLACK_WEBHOOK}"
+  VIP_IP: "${VIP_IP}"
+  VIP_PORT: "${VIP_PORT}"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: cert-manager
+  labels:
+    kustomize.toolkit.fluxcd.io/prune: disabled
 ---
 apiVersion: v1
 kind: Secret
 metadata:
   name: cloudflare-secret
   namespace: cert-manager
-spec:
-  type: Opaque
-  data:
-    CLOUDFLARE_TOKEN: "${CLOUDFLARE_TOKEN}"
+type: Opaque
+stringData:
+  CLOUDFLARE_TOKEN: "${CLOUDFLARE_TOKEN}"
