--- a/.taskfiles/flux.yaml
+++ b/.taskfiles/flux.yaml
@@ -12,7 +12,17 @@ tasks:
     deps: [check]
     desc: Flux bootstrap
     cmds:      
-      - kubectl apply --server-side --kustomize={{.ROOT_DIR}}/kubernetes/{{.ENVIRONMENT}}/bootstrap
+      - kubectl apply --server-side --kustomize={{.ROOT_DIR}}/kubernetes/bootstrap/{{.ENVIRONMENT}}
+      - task flux:bootstrap-k0s || true
+
+  bootstrap-k0s:
+    deps: [check]
+    desc: Flux bootstrap k0s cluster
+    cmds:      
+      - envsubst < {{.ROOT_DIR}}/kubernetes/bootstrap/k0s/sharedsecrets.yaml | kubectl apply -f -
+    preconditions:
+      - &test-k0s
+        sh: "[ {{.ENVIRONMENT}} = 'k0s' ]"
 
   install:
     deps: [bootstrap]
