--- a/kubernetes/apps/k0s/kube-system/coredns/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/kube-system/coredns/app/helmrelease.yaml
@@ -37,6 +37,8 @@ spec:
     deployment:
       annotations:
         reloader.stakater.com/auto: "true"
+    autoscaler:
+      enabled: false
     servers:
       - zones:
           - zone: .
