--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -1,6 +1,11 @@
 ---
 version: '3'
 
+env:
+  VAULT_ADDR: "https://vault.{{.DOMAIN}}"
+  VAULT_TOKEN:
+    sh: cat {{.ROOT_DIR}}/.vault.json | jq -r '.root_token' || true
+
 tasks:
   init:
     desc: initialize vault
