--- a/kubernetes/apps/k0s/vault/vault/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/vault/vault/app/helmrelease.yaml
@@ -31,15 +31,8 @@ spec:
         storageClass: local-path
       standalone:
         enabled: "true"
-    ingress:
+    ui:
       enabled: true
-      annotations:
-        kubernetes.io/ingress.class: nginx
-        kubernetes.io/tls-acme: "true"
-      activeService: false
-      hosts:
-        - host: "vault.${DOMAIN}"
-      tls:
-        - secretName: vault-tls
-          hosts:
-            - "vault.${DOMAIN}"
+      serviceType: "LoadBalancer"
+      serviceNodePort: null
+      externalPort: 8200
