--- a/kubernetes/apps/k0s/ingress/nginx/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/ingress/nginx/app/helmrelease.yaml
@@ -47,22 +47,14 @@ spec:
         proxy-buffer-size: 16k
         ssl-protocols: TLSv1.3 TLSv1.2
       metrics:
-        enabled: true
+        enabled: false
         serviceMonitor:
-          enabled: true
+          enabled: false
           namespace: ingress
           namespaceSelector:
             any: true
       extraArgs:
         default-ssl-certificate: "ingress/feelingsmachine-com-tls"
-      topologySpreadConstraints:
-        - maxSkew: 1
-          topologyKey: kubernetes.io/hostname
-          whenUnsatisfiable: DoNotSchedule
-          labelSelector:
-            matchLabels:
-              app.kubernetes.io/name: nginx-internal
-              app.kubernetes.io/component: controller
       resources:
         requests:
           cpu: 100m
