--- a/kubernetes/bootstrap/k0s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k0s/sharedsecrets.yaml
@@ -7,11 +7,13 @@ metadata:
 type: Opaque
 stringData:
   CILIUM_LB_IP: "${CILIUM_LB_IP}"
+  CILIUM_ID: "${CILIUM_ID}"
   CLOUDFLARE_EMAIL: "${CLOUDFLARE_EMAIL}"
   DOCKER_PRIVATE_REGISTRY: "${DOCKER_PRIVATE_REGISTRY}"
   DOMAIN: "${DOMAIN}"
   ENVIRONMENT: "${ENVIRONMENT}"
   IPAM_CIDR: "${IPAM_CIDR}"
+  NGINX_LB_IP: "${NGINX_LB_IP}"
   NFS_SERVER_IP: "${NFS_SERVER_IP}"
   SERVER_CIDR: "${SERVER_CIDR}"
   SLACK_WEBHOOK: "${SLACK_WEBHOOK}"
