--- a/kubernetes/bootstrap/k8s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k8s/sharedsecrets.yaml
@@ -15,11 +15,13 @@ spec:
       type: Opaque
       engineVersion: v2
       data:
+        CILIUM_ID: "{{.CILIUM_ID}}"
         CILIUM_LB_IP: "{{.CILIUM_LB_IP}}"
         CLOUDFLARE_EMAIL: "{{.CLOUDFLARE_EMAIL}}"
         DOCKER_PRIVATE_REGISTRY: "{{.DOCKER_PRIVATE_REGISTRY}}"
         DOMAIN: "{{.DOMAIN}}"
         ENVIRONMENT: "{{.ENVIRONMENT}}"
+        NGINX_LB_IP: "{{.NGINX_LB_IP}}"
         NFS_SERVER_IP: "{{.NFS_SERVER_IP}}"
         SERVER_CIDR: "{{.SERVER_CIDR}}"
         SLACK_WEBHOOK: "{{.SLACK_WEBHOOK}}"
