flip lldap to cilium ingress

--- a/kubernetes/apps/k8s/security/lldap/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/security/lldap/app/helmrelease.yaml
@@ -53,6 +53,7 @@ spec:
     ingress:
       main:
         enabled: true
+        ingressClassName: cilium
         hosts:
           - host: &host "lldap.${DOMAIN}"
             paths:
