--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -46,6 +46,7 @@ spec:
     ingressController:
       enabled: true      
       enforceHttps: true
+      loadBalancerMode: shared
       defaultSecretName: "${DOMAIN/./-}-tls"
       defaultSecretNamespace: ingress
       service:
