--- a/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -81,6 +81,7 @@ spec:
         rollOutPods: true
         ingress:
           enabled: true
+          className: cilium
           hosts:
             - &host "hubble.${DOMAIN}"
           tls:
