flip ingress classes

--- a/kubernetes/apps/k8s/home-automation/home-assistant/app/ingress.yaml
+++ b/kubernetes/apps/k8s/home-automation/home-assistant/app/ingress.yaml
@@ -26,7 +26,7 @@ metadata:
   name: home-assistant-code
   namespace: home-automation
 spec:
-  ingressClassName: nginx
+  ingressClassName: cilium
   rules:
   - host: "hass-code.${DOMAIN}"
     http:
