--- a/kubernetes/apps/k8s/home-automation/esphome/app/ingress.yaml
+++ b/kubernetes/apps/k8s/home-automation/esphome/app/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: esphome
   namespace: home-automation
 spec:
-  ingressClassName: nginx
+  ingressClassName: cilium
   rules:
   - host: "esphome.${DOMAIN}"
     http:
