--- a/kubernetes/apps/k8s/home-automation/frigate/app/ingress.yaml
+++ b/kubernetes/apps/k8s/home-automation/frigate/app/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: frigate
   namespace: home-automation
 spec:
-  ingressClassName: nginx
+  ingressClassName: cilium
   rules:
   - host: "cctv.${DOMAIN}"
     http:
