--- a/kubernetes/apps/k8s/monitoring/kube-prometheus-stack/app/ingress.yaml
+++ b/kubernetes/apps/k8s/monitoring/kube-prometheus-stack/app/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: alertmanager
   namespace: monitoring
 spec:
-  ingressClassName: nginx
+  ingressClassName: cilium
   rules:
   - host: "alertmanager.${DOMAIN}"
     http:
