fix missing ldap creds

--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -297,6 +297,7 @@ tasks:
           LLDAP_DB_BACKUP_SECRET="{{.LLDAP_DB_BACKUP_SECRET}}"
           LLDAP_JWT_SECRET="{{.LLDAP_JWT_SECRET}}"
           LLDAP_USER_DN="{{.LLDAP_USER_DN}}"
+          LLDAP_USER_PASSWORD="{{.LLDAP_USER_PASSWORD}}"
           LLDAP_LDAP_USER_EMAIL="{{.LLDAP_LDAP_USER_EMAIL}}"
           LLDAP_SERVER_KEY_SEED="{{.LLDAP_SERVER_KEY_SEED}}"
           LLDAP_LDAP_BASE_DN="{{.LLDAP_LDAP_BASE_DN}}"
