--- a/kubernetes/apps/k8s/security/lldap/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/security/lldap/app/externalsecret.yaml
@@ -17,6 +17,7 @@ spec:
         LLDAP_JWT_SECRET: "{{ .LLDAP_JWT_SECRET }}"
         LLDAP_LDAP_USER_PASS: "{{ .LLDAP_POSTGRES_PASSWORD }}"
         LLDAP_USER_DN: "{{ .LLDAP_USER_DN }}"
+        LLDAP_USER_PASSWORD: "{{ .LLDAP_USER_PASSWORD }}"
         LLDAP_LDAP_USER_EMAIL: "{{ .LLDAP_LDAP_USER_EMAIL }}"
         LLDAP_SERVER_KEY_SEED: "{{ .LLDAP_SERVER_KEY_SEED }}"
         LLDAP_LDAP_BASE_DN: "{{ .LLDAP_LDAP_BASE_DN }}"
