--- a/kubernetes/apps/k8s/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/security/authelia/app/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
       data:
         # App
         AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USER: "uid=admin,ou=people,{{ .LLDAP_LDAP_BASE_DN }}"
-        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD: "{{ .LLDAP_LDAP_USER_PASS }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD: "{{ .LLDAP_USER_PASSWORD }}"
         AUTHELIA_AUTHENTICATION_BACKEND_LDAP_BASE_DN: "{{ .LLDAP_LDAP_BASE_DN }}"
         AUTHELIA_IDENTITY_PROVIDERS_OIDC_HMAC_SECRET: "{{ .AUTHELIA_IDENTITY_PROVIDERS_OIDC_HMAC_SECRET }}"
         AUTHELIA_IDENTITY_PROVIDERS_OIDC_ISSUER_PRIVATE_KEY: "{{ .AUTHELIA_IDENTITY_PROVIDERS_OIDC_ISSUER_PRIVATE_KEY }}"
