--- a/kubernetes/apps/k8s/security/lldap/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/security/lldap/app/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
       engineVersion: v2
       data:
         LLDAP_JWT_SECRET: "{{ .LLDAP_JWT_SECRET }}"
-        LLDAP_LDAP_USER_PASS: "{{ .LLDAP_POSTGRES_PASSWORD }}"
+        LLDAP_LDAP_USER_PASS: "{{ .LLDAP_USER_PASSWORD }}"
         LLDAP_USER_DN: "{{ .LLDAP_USER_DN }}"
         LLDAP_USER_PASSWORD: "{{ .LLDAP_USER_PASSWORD }}"
         LLDAP_LDAP_USER_EMAIL: "{{ .LLDAP_LDAP_USER_EMAIL }}"
