--- a/kubernetes/apps/k8s/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/security/authelia/app/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
       engineVersion: v2
       data:
         # App
-        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USER: "uid=admin,ou=people,{{ .LLDAP_LDAP_BASE_DN }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USER: "uid={{ .LLDAP_USER_DN }},ou=people,{{ .LLDAP_LDAP_BASE_DN }}"
         AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD: "{{ .LLDAP_USER_PASSWORD }}"
         AUTHELIA_AUTHENTICATION_BACKEND_LDAP_BASE_DN: "{{ .LLDAP_LDAP_BASE_DN }}"
         AUTHELIA_IDENTITY_PROVIDERS_OIDC_HMAC_SECRET: "{{ .AUTHELIA_IDENTITY_PROVIDERS_OIDC_HMAC_SECRET }}"
