fix zwave ingress

--- a/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/ingress.yaml
+++ b/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: zwavejs
   namespace: home-automation
 spec:
-  ingressClassName: nginx
+  ingressClassName: cilium
   rules:
   - host: "zwavejs.${DOMAIN}"
     http:
