fix client secret

--- a/kubernetes/apps/k8s/security/oauth2-proxy/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/security/oauth2-proxy/app/externalsecret.yaml
@@ -20,4 +20,4 @@ spec:
         cookie-secret: "{{.OAUTH2_COOKIE_SECRET}}"
   dataFrom:
     - extract:
-        key: /security/authelia
+        key: /security/oauth2-proxy
