--- a/kubernetes/apps/k8s/security/dex/ks.yaml
+++ b/kubernetes/apps/k8s/security/dex/ks.yaml
@@ -2,12 +2,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-oauth2-proxy
+  name: cluster-apps-dex
   namespace: flux-system
 spec:
-  dependsOn:
-    - name: cluster-apps-dex
-  path: ./kubernetes/apps/${ENVIRONMENT}/security/oauth2-proxy/app
+  path: ./kubernetes/apps/${ENVIRONMENT}/security/dex/app
   prune: true
   sourceRef:
     kind: GitRepository
