add dep for lldap

--- a/kubernetes/apps/k8s/security/dex/ks.yaml
+++ b/kubernetes/apps/k8s/security/dex/ks.yaml
@@ -5,6 +5,8 @@ metadata:
   name: cluster-apps-dex
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: cluster-apps-lldap
   path: ./kubernetes/apps/${ENVIRONMENT}/security/dex/app
   prune: true
   sourceRef:
