--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -88,7 +88,7 @@ spec:
           annotations:
             kubernetes.io/ingress.class: nginx
             nginx.ingress.kubernetes.io/auth-url: https://oauth.${DOMAIN}/oauth2/auth
-            nginx.ingress.kubernetes.io/auth-signin: "https://oauth.${DOMAIN}/oauth2/start?rd=https://$host$request_uri$is_args$args"
+            nginx.ingress.kubernetes.io/auth-signin: "https://oauth.${DOMAIN}/oauth2/start?rd=https://foo.nucstack.com/oauth2/callback"
     ipam:
       mode: kubernetes
     ipv4NativeRoutingCIDR: 10.32.0.0/16
