--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -87,8 +87,8 @@ spec:
                 - *host
           annotations:
             kubernetes.io/ingress.class: nginx
+            nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/sign_in?rd=$request_uri
             nginx.ingress.kubernetes.io/auth-url: https://oauth.${DOMAIN}/oauth2/auth
-            nginx.ingress.kubernetes.io/auth-signin: "https://oauth.${DOMAIN}/oauth2/start?rd=https://foo.nucstack.com/oauth2/callback"
     ipam:
       mode: kubernetes
     ipv4NativeRoutingCIDR: 10.32.0.0/16
