--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -86,9 +86,9 @@ spec:
             - hosts:
                 - *host
           annotations:
-            kubernetes.io/ingress.class: nginx
-            nginx.ingress.kubernetes.io/auth-signin: https://oauth.${DOMAIN}/oauth2/start?rd=https://$host/oauth2/callback
-            nginx.ingress.kubernetes.io/auth-url: https://oauth.${DOMAIN}/oauth2/auth
+            kubernetes.io/ingress.class: cilium
+            # nginx.ingress.kubernetes.io/auth-signin: https://oauth.${DOMAIN}/oauth2/start?rd=https://$host/oauth2/callback
+            # nginx.ingress.kubernetes.io/auth-url: https://oauth.${DOMAIN}/oauth2/auth
     ipam:
       mode: kubernetes
     ipv4NativeRoutingCIDR: 10.32.0.0/16
