--- a/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -32,8 +32,8 @@ spec:
     bgp:
       enabled: false
     cluster:
-      name: kubernetes
-      id: 1
+      name: "${ENVIRONMENT}"
+      id: "${CILIUM_ID}"
     containerRuntime:
       integration: containerd
       socketPath: /var/run/k3s/containerd/containerd.sock
@@ -43,18 +43,17 @@ spec:
     #   enabled: true
     #   service:
     #     loadBalancerIP: "${CILIUM_LB_IP}"
-    # ingressController:
-    #   enabled: false
-    #   # loadbalancerMode: shared
-    #   # default: true
-    #   # enforceHttps: true
-    #   # defaultSecretName: "${DOMAIN/./-}-tls"
-    #   # defaultSecretNamespace: ingress
-    #   # service:
-    #   #   name: cilium-ingress
-    #   #   type: LoadBalancer
-    #   #   loadBalancerIP: "${CILIUM_LB_IP}"
-    #   # gateway-api-secrets-namespace: "ingress"
+    ingressController:
+      enabled: true
+      enforceHttps: true
+      loadbalancerMode: shared
+      defaultSecretName: "${DOMAIN/./-}-tls"
+      defaultSecretNamespace: ingress
+      service:
+        name: cilium-ingress
+        type: LoadBalancer
+        loadBalancerIP: "${CILIUM_LB_IP}"
+      gateway-api-secrets-namespace: "ingress"
     hubble:
       enabled: true
       metrics:
@@ -86,7 +85,8 @@ spec:
           tls:
             - hosts:
                 - *host
-          # annotations:
+          annotations:
+            kubernetes.io/ingress.class: cilium
           #   nginx.ingress.kubernetes.io/auth-signin: https://oauth.${DOMAIN}/oauth2/start?rd=$escaped_request_uri
           #   nginx.ingress.kubernetes.io/auth-url: https://oauth.${DOMAIN}/oauth2/auth
     ipam:
