--- a/kubernetes/apps/k0s/vault/vault/app/ingress.yaml
+++ b/kubernetes/apps/k0s/vault/vault/app/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: vault
   namespace: vault
 spec:
-  ingressClassName: cilium
+  ingressClassName: nginx
   rules:
   - host: "vault.${DOMAIN}"
     http:
