--- a/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -43,17 +43,17 @@ spec:
     #   enabled: true
     #   service:
     #     loadBalancerIP: "${CILIUM_LB_IP}"
-    ingressController:
-      enabled: true
-      enforceHttps: true
-      loadbalancerMode: shared
-      defaultSecretName: "${DOMAIN/./-}-tls"
-      defaultSecretNamespace: ingress
-      service:
-        name: cilium-ingress
-        type: LoadBalancer
-        loadBalancerIP: "${CILIUM_LB_IP}"
-      gateway-api-secrets-namespace: "ingress"
+    # ingressController:
+    #   enabled: true
+    #   enforceHttps: true
+    #   loadbalancerMode: shared
+    #   defaultSecretName: "${DOMAIN/./-}-tls"
+    #   defaultSecretNamespace: ingress
+    #   service:
+    #     name: cilium-ingress
+    #     type: LoadBalancer
+    #     loadBalancerIP: "${CILIUM_LB_IP}"
+    #   gateway-api-secrets-namespace: "ingress"
     hubble:
       enabled: true
       metrics:
@@ -86,7 +86,7 @@ spec:
             - hosts:
                 - *host
           annotations:
-            kubernetes.io/ingress.class: cilium
+            kubernetes.io/ingress.class: nginx
           #   nginx.ingress.kubernetes.io/auth-signin: https://oauth.${DOMAIN}/oauth2/start?rd=$escaped_request_uri
           #   nginx.ingress.kubernetes.io/auth-url: https://oauth.${DOMAIN}/oauth2/auth
     ipam:
