--- a/kubernetes/apps/k8s/security/lldap/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/security/lldap/app/helmrelease.yaml
@@ -52,7 +52,7 @@ spec:
             port: *ldapPort
     ingress:
       main:
-        enabled: true
+        enabled: false
         ingressClassName: nginx
         hosts:
           - host: &host "lldap.${DOMAIN}"
