--- a/kubernetes/apps/k8s/security/kustomization.yaml
+++ b/kubernetes/apps/k8s/security/kustomization.yaml
@@ -8,6 +8,6 @@ resources:
   - ./externalsecret.yaml
   # Flux-Kustomizations
   #- ./authelia/ks.yaml
-  - ./dex/ks.yaml
-  - ./lldap/ks.yaml
-  - ./oauth2-proxy/ks.yaml
+  #- ./dex/ks.yaml
+  #- ./lldap/ks.yaml
+  #- ./oauth2-proxy/ks.yaml
